--- a/stones shop/home.css
+++ b/stones shop/home.css
@@ -6,6 +6,7 @@
     margin: 0%;
     font-family: "Epilogue", sans-serif;
     box-sizing: border-box;
+  
 }
 
 html {
@@ -15,20 +16,21 @@ html {
 
 /* this is total body */
 body {
-
-    padding: 3%;
+    padding: 0; /* Remove unnecessary padding */
     background-color: #eee5dc;
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.total_body {
-    height: 100%;
-    width: 100%;
+    min-height: 100vh; /* Ensures viewport height */
+  }
+  
+  .total_body {
+    height: 100%; /* Inherits full height from body */
+    width: 100vw; /* Uses viewport width for full width */
     border-radius: 5px;
     background: #f9fbfc;
-}
+  }
+  
 
 .top_nav {
     width: 100%;
@@ -321,73 +323,281 @@ ul li ul li {
     color: #9d8472;
 }
 
-.astrologer_owner {
-    width: 100%;
+/* review section  */
+
+*{
+    margin: 0px;
+    padding: 0px;
+    font-family: poppins;
+    box-sizing: border-box;
+  }
+  a{
+    text-decoration: none;
+  }
+  #testimonials{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width:100%;
+  }
+  .testimonial-heading{
+    letter-spacing: 1px;
+    margin: 30px 0px;
+    padding: 10px 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .testimonial-heading span{
+    font-size: 1.3rem;
+    color: #252525;
+    margin-bottom: 10px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+  }
+  .testimonial-box-container{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    padding: 10px;
-}
-
-.astro_title {
+    width:100%;
+  }
+  .testimonial-box{
+    width:500px;
+    box-shadow: 2px 2px 30px rgba(0,0,0,0.1);
+    background-color: #ffffff;
+    padding: 20px;
+    margin: 15px;
+    cursor: pointer;
+  }
+  .profile-img{
+    width:50px;
+    height: 50px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-right: 10px;
+  }
+  .profile-img img{
     width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-    margin: 2%
-}
-
-.astrologer {
-    display: flex;
-    width: 100%;
-    margin: 10px 0;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-}
-
-.astro_own_card {
-    display: flex;
-    height: 500px;
-    width: 83%;
-    /* border: 1px solid #000; */
-    margin: 0 15px 15px 15px;
-    border-radius: 10px;
-    box-shadow: rgba(99, 99, 99, 0.351) 0px 2px 8px 0px;
-    transition: all 0.8s cubic-bezier(0.15, 0.83, 0.66, 1);
-    padding: 3%;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-wrap: nowrap;
-}
-
-.astro_own_card:hover {
-    transform: scale(1.05);
-}
-
-.astro_image {
-    width: 40%;
-    height: 90%;
-    border-radius: 5%;
-}
-
-.astro_image img {
     height: 100%;
-    width: 100%;
     object-fit: cover;
     object-position: center;
-    border-radius: 5%;
+  }
+  .profile{
+    display: flex;
+    align-items: center;
+  }
+  .name-user{
+    display: flex;
+    flex-direction: column;
+  }
+  .name-user strong{
+    color: #3d3d3d;
+    font-size: 1.1rem;
+    letter-spacing: 0.5px;
+  }
+  .name-user span{
+    color: #979797;
+    font-size: 0.8rem;
+  }
+  .reviews{
+    color: #f9d71c;
+  }
+  .box-top{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+  .client-comment p{
+    font-size: 0.9rem;
+    color: #4b4b4b;
+  }
+  .testimonial-box:hover{
+    transform: translateY(-10px);
+    transition: all ease 0.3s;
+  }
+  
+  @media(max-width:1060px){
+    .testimonial-box{
+        width:45%;
+        padding: 10px;
+    }
+  }
+  @media(max-width:790px){
+    .testimonial-box{
+        width:100%;
+    }
+    .testimonial-heading h1{
+        font-size: 1.4rem;
+    }
+  }
+  @media(max-width:340px){
+    .box-top{
+        flex-wrap: wrap;
+        margin-bottom: 10px;
+    }
+    .reviews{
+        margin-top: 10px;
+    }
+  }
+  ::selection{
+    color: #ffffff;
+    background-color: #252525;
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.owner{
+    text-align: center;
+    font-size: 1.8rem;
 }
 
-.astro_description {
-    width: 40%;
-    height: 85%;
-    border-radius: 5%;
-    padding: 3%;
+.main-content{
+    margin-top: 25px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin-bottom: 25px;
+    padding: 5px;
 
 }
+
+
+
+
+
+
+
+/* mmm  */
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
+* {
+	box-sizing: border-box;
+}
+
+
+
+h3 {
+	margin: 10px 0;
+}
+
+h6 {
+	margin: 5px 0;
+	text-transform: uppercase;
+}
+
+p {
+	font-size: 14px;
+	line-height: 21px;
+}
+
+.card-container {
+	background-color:#eee5dc;
+	border-radius: 5px;
+	box-shadow: 0px 10px 20px -10px rgba(0,0,0,0.75);
+	color: #252628;
+	padding-top: 30px;
+	position: relative;
+	width: 350px;
+	max-width: 100%;
+	text-align: center;
+    margin-bottom: 20px;
+}
+
+.card-container .pro {
+	color: #231E39;
+	background-color: #FEBB0B;
+	border-radius: 3px;
+	font-size: 14px;
+	font-weight: bold;
+	padding: 3px 7px;
+	position: absolute;
+	top: 30px;
+	left: 30px;
+}
+
+.card-container img{
+    height: 200px;
+    width: auto;
+} 
+
+.card-container .round {
+	border: 1px solid #9d8472;
+	border-radius: 50%;
+	padding: 7px;
+}
+
+button.primary {
+	background-color: #9d8472;
+	border: 1px solid#9d8472;
+	border-radius: 3px;
+	color: #231E39;
+	font-family: Montserrat, sans-serif;
+	font-weight: 500;
+	padding: 10px 25px;
+}
+button.primary:hover{
+    cursor: pointer;
+
+}
+
+button.primary.ghost {
+	background-color: transparent;
+	color:#9d8472;
+}
+button.primary.ghost :hover{
+    cursor: pointer;
+}
+button.primary.ghost a{
+    text-decoration: none;
+    color: #9d8472;
+}
+.skills {
+	background-color: #eee5dc;
+	text-align: left;
+	padding: 15px;
+	margin-top: 30px;
+}
+
+.skills ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
+
+.skills ul li {
+	border: 1px solid #2D2747;
+	border-radius: 2px;
+	display: inline-block;
+	font-size: 12px;
+	margin: 0 7px 7px 0;
+	padding: 7px;
+}
+
+
+.location{
+    margin-top: 20px;
+    text-align: center;
+    padding: 25px;
+    font-size: 1.6rem;
+}
+
 
 .location_container {
     width: 100%;
@@ -670,18 +880,23 @@ ul li ul li {
     display: none;
 }
 
-@media only screen and (max-width:600px) {
-    body {
-        padding: 0;
-    }
+@media only screen and (max-width:768px) {
 
+    *{
+        overflow-x: hidden;
+    }
     .top_nav i {
         display: inline-flex;
         right: 0;
         margin-right: 10px;
         position: absolute;
     }
-
+    .pop_card_image,.popular_card,.logo,.social_links{
+        overflow: hidden;
+    }
+    .slimg{
+        min-width: 100%;
+    }
     .top_nav .menu {
         position: absolute;
         top: 5%;
