--- a/stones shop/cat.css
+++ b/stones shop/cat.css
@@ -2,11 +2,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100..900;1,100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
 
 * {
-    padding: 0%;
-    margin: 0%;
-    font-family: "Epilogue", sans-serif;
-    box-sizing: border-box;
+  padding: 0%;
+  margin: 0%;
+  font-family: "poppins", sans-serif;
+  box-sizing: border-box;
 }
+
 .top_nav {
   width: 100%;
   display: flex;
@@ -59,7 +60,7 @@ ul li ul {
   position: absolute;
   padding-left: 0;
   display: none;
-  background: white; 
+  background: white;
 }
 
 ul li:hover>ul,
@@ -84,125 +85,129 @@ ul li ul li {
 
 
 body {
-    background-color: #fdf1ec;
+  background-color: #fdf1ec;
 }
 
 .container {
-    width: 100%;
+  width: 100%;
 }
 
 
 .wrapper {
-    width: 100%;
-    height: 90vh;
-    margin: auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
+  width: 100%;
+  height: 90vh;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 .text {
-    flex-basis: 45%;
+  flex-basis: 45%;
 }
 
 .all-images {
-    height: 80vh;
-    width: 100%; /* Added width */
-    display: flex;
+  height: 80vh;
+  width: 100%;
+  /* Added width */
+  display: flex;
 }
 
 .small-images {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .small-images img {
-    height: 19vh;
-    margin-bottom: 9px;
-    cursor: pointer;
-    opacity: 0.6;
-    border: 2px solid #93775c;
-    padding: 2px;
+  height: 19vh;
+  margin-bottom: 9px;
+  cursor: pointer;
+  opacity: 0.6;
+  border: 2px solid #93775c;
+  padding: 2px;
 }
 
 .small-images img:hover {
-    opacity: 1;
+  opacity: 1;
 }
 
 .main-images {
-    margin-left: 15px;
-    flex-basis: 55%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%; /* Set height to 100% */
-    flex-direction: column;
+  margin-left: 15px;
+  flex-basis: 55%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  /* Set height to 100% */
+  flex-direction: column;
 }
 
 .main-images img {
-    max-height: 100%;
-    max-width: 100%; /* Ensure image doesn't overflow its container */
-    border:2px solid #93775c;
-    padding: 3px;
+  max-height: 100%;
+  max-width: 100%;
+  /* Ensure image doesn't overflow its container */
+  border: 2px solid #93775c;
+  padding: 3px;
 }
 
 .content {
-    text-align: center;
+  text-align: center;
 }
 
 .content h2 {
-    font-size: 35px;
-    color: #555;
-    margin-bottom: 20px;
+  font-size: 35px;
+  color: #555;
+  margin-bottom: 20px;
 }
 
 .content p {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .brand {
-    /* background-color: #008000; */
-    background-color: #93775c;
-    color: #fff;
-    font-size: 12px;
-    padding: 2px 5px;
+  /* background-color: #008000; */
+  background-color: #93775c;
+  color: #fff;
+  font-size: 12px;
+  padding: 2px 5px;
 }
 
 .review {
-    /* background-color: #008000; */
-    background-color:  #93775c;
-    /* background-color:  #F2E9E9 , #832729; */
-    display: inline-block;
-    color: #fff;
-    padding: 4px;
-    border-radius: 5px;
-    font-size: 15px;
+  /* background-color: #008000; */
+  background-color: #93775c;
+  /* background-color:  #F2E9E9 , #832729; */
+  display: inline-block;
+  color: #fff;
+  padding: 4px;
+  border-radius: 5px;
+  font-size: 15px;
 }
 
 .review .fa {
-    color: #fff;
+  color: #fff;
 }
 
 .price {
-    color: rgb(29, 28, 28);
-    font-size: 20px;
-    font-weight: bold;
-    padding-top: 10px;
-    padding-right: 10px;
+  color: rgb(29, 28, 28);
+  font-size: 20px;
+  font-weight: bold;
+  padding-top: 10px;
+  padding-right: 10px;
 }
 
 .price-box {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
-.heading{
+.heading {
   text-align: center;
   font-size: 2rem;
   margin: 5px;
   margin-top: 20px;
 }
-.head{
+
+.head {
   border: 2px solid #93775c;
   border-radius: 5px;
   padding: 5px;
@@ -210,13 +215,14 @@ body {
   background-color: #93775c;
 
 }
-.price-box{
+
+.price-box {
   margin-top: 5px;
   justify-content: center;
 }
 
 
-.btn{
+.btn {
   padding-top: 10px;
   height: 50px;
   width: 100%;
@@ -225,7 +231,8 @@ body {
   background-color: #93775c;
   transition: all 0.8s cubic-bezier(0.15, 0.83, 0.66, 1);
 }
- a{
+
+a {
   text-decoration: none;
   text-align: center;
   justify-content: center;
@@ -233,132 +240,143 @@ body {
   color: white;
   font-size: 25px;
 }
-.btn:hover{
+
+.btn:hover {
   transform: scale(1.05);
 }
-
+.top_nav i {
+  display: none;
+}
 
 
 @media only screen and (max-width:600px) {
 
 
   .top_nav i {
-      display: inline-flex;
-      right: 0;
-      margin-right: 10px;
-      position: absolute;
+    display: inline-flex;
+    right: 0;
+    margin-right: 10px;
+    position: absolute;
   }
 
   .top_nav .menu {
-      position: absolute;
-      top: 5%;
-      width: 100%;
-      max-height: 0;
-      left: 0;
-      overflow: hidden;
-      background: #9d8472;
-      backdrop-filter: blur(50px);
-      z-index: 99;
-      transition: all ease-in-out .5s;
+    position: absolute;
+    top: 5%;
+    width: 100%;
+    max-height: 0;
+    left: 0;
+    overflow: hidden;
+    background: #9d8472;
+    backdrop-filter: blur(50px);
+    z-index: 99;
+    transition: all ease-in-out .5s;
   }
-  
-  
+
+
   .menu ul li {
-      display: block;
-      text-align: center;
-      margin: 25px 0;
+    display: block;
+    text-align: center;
+    margin: 25px 0;
   }
 
   .top_nav .title {
-      padding-left: 5%;
-      width: 90%;
+    padding-left: 5%;
+    width: 90%;
   }
 
   h2 {
-      font-size: 16px;
+    font-size: 16px;
   }
 
   /* ........ */
 
   /* ..................................... */
   .logo_title .logo {
-      height: 76px;
-      width: 96px;
-      margin-right: 29px;
-      border-radius: 50%;
+    height: 76px;
+    width: 96px;
+    margin-right: 29px;
+    border-radius: 50%;
   }
 
   .logo_title .logo img {
-      object-fit: cover;
+    object-fit: cover;
   }
 
   .social_links i {
-      margin: 30px;
+    margin: 30px;
   }
 }
-.top_nav i {
-  display: none;
-}
+
+
+
 /* Media Queries */
 
 @media screen and (max-width: 768px) {
-    .wrapper {
-        flex-direction: column;
-        height: auto;
-    }
+  .wrapper {
+    flex-direction: column;
+    height: auto;
+  }
 
-    .text {
-        flex-basis: 100%;
-        margin-bottom: 20px;
-    }
+  .text {
+    flex-basis: 100%;
+    margin-bottom: 20px;
+  }
 
-    .all-images {
-        height: auto;
-        width: 100%;
-    }
-    .small-images{
-      display: none;
-    }
-    .main-images {
-        flex-basis: 100%;
-        height: 100%;
-        margin-left: 0;
-        margin-top: 20px;
-    }
-    .main-images h4{
-      margin-bottom: 5px;
-    }
-    .text{
-      margin-top:10px ;
-    }
-    .price-box{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    .price-box  .price{
-      font-size: 1.2rem;
-    }
+  .all-images {
+    height: auto;
+    width: 100%;
+  }
 
-    
+  .small-images {
+    display: none;
+  }
 
-    .btn{
-      height: 50px;
-      width: 95%;
-      margin: 10px;
-      border-radius: 15px;
-      border: 2px solid black;
-      background-color: #93775c;
-    }
-    .btn a{
-      text-decoration: none;
-      text-align: center;
-      justify-content: center;
-      align-items: center;
-      color: white;
-      font-size: 25px;
-    }
-    .btn:hover{
-      box-shadow: 5px 10px 15px #e88c4a;
-    }
+  .main-images {
+    flex-basis: 100%;
+    height: 100%;
+    margin-left: 0;
+    margin-top: 20px;
+  }
+
+  .main-images h4 {
+    margin-bottom: 5px;
+  }
+
+  .text {
+    margin-top: 10px;
+  }
+
+  .price-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .price-box .price {
+    font-size: 1.2rem;
+  }
+
+
+
+  .btn {
+    height: 50px;
+    width: 95%;
+    margin: 10px;
+    border-radius: 15px;
+    border: 2px solid black;
+    background-color: #93775c;
+  }
+
+  .btn a {
+    text-decoration: none;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 25px;
+  }
+
+  .btn:hover {
+    box-shadow: 5px 10px 15px #e88c4a;
+  }
 }
